# c-ai-optimizer

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.claude/commands/: optimize.md
.github/workflows/: ci.yml
include/: matrix.h  stats.h  utils.h  vector.h
src/: main.c  matrix.c  stats.c  utils.c  vector.c
src_optimized/: README.md  main.c  matrix.c  stats.c  utils.c  vector.c
tests/: test_matrix.c  test_matrix_comprehensive.c  test_runner.c  test_stats.c  test_vector.c
